--- a/parte-4/package.json
+++ b/parte-4/package.json
@@ -15,9 +15,9 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "node --test"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env  NODE_ENV=test node --test"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -27,6 +27,8 @@
     "mongoose": "^8.19.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "cross-env": "^10.1.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
