--- a/parte-7/bloglist/backend/package.json
+++ b/parte-7/bloglist/backend/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "cross-env": "^10.1.0",
     "nodemon": "^3.1.10",
+    "prettier": "3.6.2",
     "supertest": "^7.1.4"
   }
 }
