--- a/parte-7/bloglist/frontend/package.json
+++ b/parte-7/bloglist/frontend/package.json
@@ -11,6 +11,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.10",
     "axios": "^1.9.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
