--- a/parte-8/biblioteca-backend/package.json
+++ b/parte-8/biblioteca-backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/server": "^5.2.0",
     "graphql": "^16.12.0",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "uuid": "^13.0.0"
   }
 }
