--- a/parte-8/biblioteca-backend/package.json
+++ b/parte-8/biblioteca-backend/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@apollo/server": "^5.2.0",
+    "dotenv": "^17.2.3",
     "graphql": "^16.12.0",
+    "mongoose": "^9.0.0",
     "nodemon": "^3.1.11",
     "uuid": "^13.0.0"
   }
