--- a/parte-8/biblioteca-backend/package.json
+++ b/parte-8/biblioteca-backend/package.json
@@ -15,7 +15,6 @@
     "dotenv": "^17.2.3",
     "graphql": "^16.12.0",
     "mongoose": "^9.0.0",
-    "nodemon": "^3.1.11",
-    "uuid": "^13.0.0"
+    "nodemon": "^3.1.11"
   }
 }
