--- a/parte-8/biblioteca-backend/package.json
+++ b/parte-8/biblioteca-backend/package.json
@@ -12,10 +12,16 @@
   },
   "dependencies": {
     "@apollo/server": "^5.2.0",
+    "@as-integrations/express5": "^1.1.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "graphql": "^16.12.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.16.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "ws": "^8.18.3"
   }
 }
