--- a/parte-8/biblioteca-backend/package.json
+++ b/parte-8/biblioteca-backend/package.json
@@ -14,6 +14,7 @@
     "@apollo/server": "^5.2.0",
     "@as-integrations/express5": "^1.1.2",
     "cors": "^2.8.5",
+    "dataloader": "^2.2.3",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "graphql": "^16.12.0",
