--- a/parte-9/calculadora-imc/package.json
+++ b/parte-9/calculadora-imc/package.json
@@ -7,6 +7,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "calculateBmi": "ts-node bmiCalculator.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
