--- a/parte-9/servicios-de-salud/package.json
+++ b/parte-9/servicios-de-salud/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "calculadora-imc",
+  "name": "servicios-de-salud",
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
   "author": "DiriARG",
-  "type": "commonjs",
-  "main": "index.js",
   "scripts": {
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts",
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "express": "^5.2.1"
   }
 }
