--- a/parte-12/part12-containers-applications/todo-app/todo-backend/docker-compose.dev.yml
+++ b/parte-12/part12-containers-applications/todo-app/todo-backend/docker-compose.dev.yml
@@ -14,6 +14,7 @@ services:
   redis:
     image: redis
     command: ['redis-server', '--appendonly', 'yes']
+    # Los datos se almacenan en el directorio redis_data.
     volumes:
       - ./redis_data:/data
     ports:
