--- a/parte-12/part12-containers-applications/todo-app/todo-frontend/Dockerfile
+++ b/parte-12/part12-containers-applications/todo-app/todo-frontend/Dockerfile
@@ -8,7 +8,10 @@ COPY . .
 
 RUN npm ci
 
-# Variable de entorno usada por Vite en "build-time". Se define la variable antes de construir (npm run build).
+# Se ejecutan las pruebas (si fallan, el build falla).
+RUN npm test
+
+# Variable de entorno usada por Vite en "build-time". Se define la variable antes de realizar la build (npm run build).
 ENV VITE_BACKEND_URL=http://localhost:3000
 
 RUN npm run build
