--- a/parte-12/part12-containers-applications/todo-app/todo-backend/docker-compose.dev.yml
+++ b/parte-12/part12-containers-applications/todo-app/todo-backend/docker-compose.dev.yml
@@ -2,7 +2,7 @@ services:
   mongo:
     image: mongo
     ports:
-     - 3456:27017
+      - 3456:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
@@ -10,7 +10,7 @@ services:
     volumes:
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
       - mongo_data:/data/db
-  
+
   redis:
     image: redis
     command: ['redis-server', '--appendonly', 'yes']
@@ -19,6 +19,30 @@ services:
       - ./redis_data:/data
     ports:
       - 6379:6379
+
+  todo-backend:
+    image: todo-backend-dev
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
+    volumes:
+      - ./:/usr/src/app
+    ports:
+      - 3000:3000
+    # Variables de entorno que el backend usa para conectarse.
+    environment:
+      # Cambia el puerto de mongo, antes era 3456, por el 27017 que es el puerto interno de MongoDB (3456:27017).
+      - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
+      - REDIS_URL=redis://redis:6379
+    # Enciende el back cuando los contenedores de mongo y redis estan funcionando.
+    depends_on:
+      - mongo
+      - redis
+    container_name: todo-backend-dev
+  # Para depuración.
+  debug-helper:
+    # Busybox aka "La navaja suiza de Embedded Linux", permite inspeccionar la red interna, probar conexiones y verificar que los servicios se vean entre sí.
+    image: busybox
 
 volumes:
   mongo_data:
