--- a/parte-7/bloglist/backend/package.json
+++ b/parte-7/bloglist/backend/package.json
@@ -16,7 +16,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "dev": "cross-env NODE_ENV=development nodemon -L index.js",
     "test": "cross-env  NODE_ENV=test node --test",
     "start:test": "cross-env NODE_ENV=test node --watch index.js"
   },
